# local-data-platform

./: .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.docs  Makefile  README.md  how_to_setup.md  kafka.py  mkdocs.yml  notes.py  partner.py  pyproject.toml  readthedocs.yml  requirements.txt  resturant_data_mart_PRD.md  spark.py  streaming.md
local-data-platform/: MVP-RequirementDoc.md  README.md  __init__.py  hello_world.py  nyc_yellow_taxi.py  nyc_yellow_taxi_ingestion.py  pyproject.toml  show_databases.py
local-data-platform/local_data_platform/: __init__.py  catalog.py  cron_flow.py  download.py  etl.py  exceptions.py  logger.py  makefile
local-data-platform/local_data_platform/catalog/: __init__.py  sql.py
local-data-platform/local_data_platform/catalog/local/: __init__.py
local-data-platform/local_data_platform/engine/: __init__.py
local-data-platform/local_data_platform/format/: __init__.py
local-data-platform/local_data_platform/format/csv/: __init__.py
local-data-platform/local_data_platform/format/iceberg/: __init__.py
local-data-platform/local_data_platform/format/parquet/: __init__.py
local-data-platform/local_data_platform/pipeline/: __init__.py
local-data-platform/local_data_platform/pipeline/egression/: __init__.py
local-data-platform/local_data_platform/pipeline/ingestion/: __init__.py
local-data-platform/local_data_platform/pipeline/report/: __init__.py
local-data-platform/local_data_platform/pipelines/: __init__.py
local-data-platform/local_data_platform/pipelines/python/: base_pipeline.py
local-data-platform/local_data_platform/product/: vocab.py
local-data-platform/local_data_platform/source/: base_source.py
local-data-platform/local_data_platform/source/gcp/: gcp_connection.py
local-data-platform/local_data_platform/source/near/: source_near_gcp.py
local-data-platform/local_data_platform/source/near_gcp/: source_near_gcp.py
local-data-platform/local_data_platform/source/parquet/: pyarrow_table.py  (+1 more)
local-data-platform/local_data_platform/store/: __init__.py  catalog.py  dimension.py
local-data-platform/local_data_platform/transformations/: bronze_layer.py  gold_layer.py  orchestrator.py  profiles.yml  silver_layer.py
local-data-platform/real_world_use_cases/near_data_lake/: monthly_reporting.py  tmp.py
local-data-platform/real_world_use_cases/nyc_yellow_taxi_dataset/: config.json  is_nyc_yellow_taxi_safe.py  monthly_reporting.py  parquet_to_iceberg.py
local-data-platform/tests/: test_counts.py  test_dimension.py  test_extract_big_query_to_csv.py  test_gcp_connection.py  test_metadata.py
local-data-platform/tmp/warehouse/: pyiceberg_catalog.db
src/: nyc_yellow_taxi.py  pyproject.toml
src/local_data_platform/: hello_world.py  logger.py
src/local_data_platform/github/: __init__.py
src/local_data_platform/issue/: __init__.py
src/real_world_use_cases/near_data_lake/: near_transactions.csv
src/real_world_use_cases/nyc_yellow_taxi_dataset/: monthly_reporting.md
src/tests/: test_format_iceberg_extract.py
(+129 files in other folders)
