[tool.poetry]
name = "local-data-platform"
version = "0.1.0"
description = ""
authors = ["Tushar Choudhary <151359025+tusharchou@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyiceberg = "^0.7.1"
pyarrow = "^17.0.0"
google-auth = "^2.35.0"
pytest = "^8.3.3"
magicmock = "^0.3"
google = "^3.0.0"
google-cloud-bigquery = "^3.26.0"
setuptools = "^75.1.0"
sphinx-rtd-theme = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
