[tool.poetry]
name = "local-data-platform"
version = "0.1.1"
description = "Python library for iceberg lake house on your local"
authors = ["Tushar Choudhary <151359025+tusharchou@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyiceberg = "^0.7.1"
pyarrow = "^17.0.0"
google-auth = "^2.35.0"
pytest = "^8.3.3"
magicmock = "^0.3"
google = "^3.0.0"
google-cloud-bigquery = "^3.26.0"
pandas = "^2.2.3"
db-dtypes = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
